# blade-whiskey-eyes

./: .gitignore  Makefile.am  NEWS  README  configure.ac.in
bar-plugin/: Makefile.am  eyes.c  eyes.desktop.in  eyes.h
icons/48x48/: Makefile.am
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+13 more)
